[tool.poetry]
name = "idz"
version = "0.1.0"
description = ""
authors = ["MR-Geri <ilya.kamckine@ya.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
dearpygui = "^1.10.1"
psycopg2-binary = "^2.9.9"
pandas = "^2.1.4"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
